syntax = "proto3";

package proto;

/*-
 * ‌
 * Hedera Network Services Protobuf
 * ​
 * Copyright (C) 2018 - 2020 Hedera Hashgraph, LLC
 * ​
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * ‍
 */

option java_package = "com.hederahashgraph.service.proto.java";

import "Query.proto";
import "Response.proto";
import "TransactionResponse.proto";
import "Transaction.proto";

/* The requests and responses for different network services. */
service TokenService {
    rpc mintToken (Transaction) returns (TransactionResponse);
    rpc burnToken (Transaction) returns (TransactionResponse);
    rpc createToken (Transaction) returns (TransactionResponse);
    rpc updateToken (Transaction) returns (TransactionResponse);
    rpc deleteToken (Transaction) returns (TransactionResponse);
    rpc transferTokens (Transaction) returns (TransactionResponse);
    rpc wipeTokenAccount (Transaction) returns (TransactionResponse);
    rpc freezeTokenAccount (Transaction) returns (TransactionResponse);
    rpc unfreezeTokenAccount (Transaction) returns (TransactionResponse);
    rpc grantKycToTokenAccount (Transaction) returns (TransactionResponse);
    rpc revokeKycFromTokenAccount (Transaction) returns (TransactionResponse);

    rpc getTokenInfo (Query) returns (Response);
}
